tests/miniJava/pos/000676_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( java ) java [ 0 ] = 0 ; else java [ 0 ] = 0 ; } }
