tests/miniJava/neg/003865_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { if int [] java ; ( 0 ) { } else { } } }
